--- a/assets/css/sass/_overrides.scss
+++ b/assets/css/sass/_overrides.scss
@@ -12,18 +12,18 @@
 // --------------------------------------------------
 
 
-// _header.scss
-// #secondary-menu {
-//      margin-top: 14px;
-// }
+_header.scss
+#secondary-menu {
+      margin-top: 14px;
+}
 
-//_home.scss
-// #home-watermark {
+_home.scss
+//#home-watermark {
 // 	background-position: right bottom;
-// }
-// #nav-developers {
-//     background: #96161A;
-// }
-// #home-developers {
-//     background: #96161A;
-// }
+//}
+#nav-developers {
+    background: #FA8072;  //#96161A;
+ }
+#home-developers {
+     background: #FA8072;  //#96161A
+ }
